[package]
authors = ["BurntPizza <xburntpizza@gmail.com>"]
name = "recurse_arena"
version = "0.1.0"


[lib]
path = "src/lib.rs"

[[bin]]
name = "RecurseArena"
path = "src/main.rs"

[dependencies]
ezing = "0.1.2"
find_folder = "0.3.0"
glutin = "0.8.1"
ludomath = "1.1.1"
piston = "0.32.0"
piston2d-graphics = "0.21.1"
piston2d-opengl_graphics = "0.43.1"
pistoncore-glutin_window = "0.37.0"